crates/oxc_transform_svg_jsx/src/snapshots/oxc_transform_svg_jsx__tests__dimensions_false_removes_source_dimensions_before_adding_svg_props.snap
---
source: crates/oxc_transform_svg_jsx/src/lib.rs
expression: result
---
import * as React from "react";
const SvgComponent = (props) => <svg viewBox="0 0 10 20" width="1em" {...props} />;
export default SvgComponent;
