crates/oxc_transform_svg_jsx/src/snapshots/oxc_transform_svg_jsx__tests__native_drops_unsupported_subtrees_during_sink_time.snap
---
source: crates/oxc_transform_svg_jsx/src/lib.rs
expression: result
---
import * as React from "react";
import Svg, { G, Path } from "react-native-svg";
const SvgComponent = (props) => <Svg {...props}><G><Path d="M1 1" /></G></Svg>;
export default SvgComponent;
