crates/oxc_transform_svg_jsx/src/snapshots/oxc_transform_svg_jsx__tests__native_preserves_existing_uppercase_svg_root.snap
---
source: crates/oxc_transform_svg_jsx/src/lib.rs
expression: result
---
import * as React from "react";
import Svg, { Path } from "react-native-svg";
const SvgComponent = (props) => <Svg {...props}><Path d="M0 0" /></Svg>;
export default SvgComponent;
