crates/oxc_transform_svg_jsx/src/snapshots/oxc_transform_svg_jsx__tests__parses_previous_export_as_statements.snap
---
source: crates/oxc_transform_svg_jsx/src/lib.rs
expression: result
---
import * as React from "react";
const SvgComponent = (props) => <svg {...props} />;
export { SvgComponent as Component };
const img = "logo.svg";
export default img;
