crates/oxc_transform_svg_jsx/src/snapshots/oxc_transform_svg_jsx__tests__replace_attr_values_applies_to_source_and_added_svg_attributes.snap
---
source: crates/oxc_transform_svg_jsx/src/lib.rs
expression: result
---
import * as React from "react";
const SvgComponent = (props) => <svg fill={props.color} role="presentation" {...props} />;
export default SvgComponent;
