crates/oxc_transform_svg_jsx/src/snapshots/oxc_transform_svg_jsx__tests__supports_automatic_runtime_and_dimensions_false.snap
---
source: crates/oxc_transform_svg_jsx/src/lib.rs
expression: result
---
const SvgComponent = (props) => <svg viewBox="0 0 10 20" {...props} />;
export default SvgComponent;
