crates/oxc_transform_svg_jsx/src/snapshots/oxc_transform_svg_jsx__tests__supports_icon_and_replace_values.snap
---
source: crates/oxc_transform_svg_jsx/src/lib.rs
expression: result
---
import * as React from "react";
const SvgComponent = (props) => <svg fill={props.color} width={24} height={24} {...props} />;
export default SvgComponent;
