crates/oxc_transform_svg_jsx/src/snapshots/oxc_transform_svg_jsx__tests__supports_native.snap
---
source: crates/oxc_transform_svg_jsx/src/lib.rs
expression: result
---
import * as React from "react";
import Svg, { G, Path } from "react-native-svg";
const SvgComponent = (props) => <Svg width={24} height={24} {...props}><G><Path d="M0 0" /></G></Svg>;
export default SvgComponent;
